Alignment fixed
Alignment fixed

--- a/css/style_riyadh.css
+++ b/css/style_riyadh.css
@@ -438,9 +438,8 @@
 #temp{        display: block;
     width: 100%;
     margin: 20px 0px 0 13px;
-    font-size: 26px;
+    font-size: 25px;
     line-height: 40px;
-   
   }
 body{
   /*margin:120px auto;
